# yak

./: .gitignore  LICENSE  README.md  pyproject.toml
yak/: cli.py  core.py
